<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_marginTop="20dp"
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_rouded">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/text_name_filme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="t"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_director"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/director"
                        android:textColor="@color/text"
                        app:layout_constraintTop_toBottomOf="@id/text_name_filme" />

                    <TextView
                        android:id="@+id/name_director"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:text=""
                        android:textColor="@color/text"
                        app:layout_constraintStart_toEndOf="@id/text_director"
                        app:layout_constraintTop_toBottomOf="@id/text_name_filme" />

                    <TextView
                        android:id="@+id/text_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/time"
                        android:textColor="@color/text"
                        app:layout_constraintTop_toBottomOf="@id/text_director" />

                    <TextView
                        android:id="@+id/text_time_hours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text=""
                        android:textColor="@color/text"
                        app:layout_constraintStart_toEndOf="@id/text_time"
                        app:layout_constraintTop_toBottomOf="@id/name_director" />

                    <TextView
                        android:id="@+id/text_time_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/min"
                        android:textColor="@color/text"
                        app:layout_constraintStart_toEndOf="@id/text_time_hours"
                        app:layout_constraintTop_toBottomOf="@id/name_director" />

                    <TextView
                        android:id="@+id/text_imb"
                        android:text="9.0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="@color/yellow"
                        app:layout_constraintTop_toBottomOf="@+id/text_time"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/img_banner"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginBottom="10dp" />

        </FrameLayout>
    </RelativeLayout>

</LinearLayout>
