<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".InfoActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_fundo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="-10dp"
            android:src="@drawable/img_fund_guardians_galaxy" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-40dp"
            android:background="@drawable/background_rouded">

            <TextView
                android:id="@+id/text_name_filme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/guardians_of_the_galaxyaum"
                android:layout_marginTop="35dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/imb_filme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imb_guardians_of_the_galaxyaum"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/text_name_filme"/>

            <TextView
                android:id="@+id/text_sinopse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sinopse_guardians_of_the_galaxyaum"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textAlignment="textStart"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="@color/text"
                app:layout_constraintTop_toBottomOf="@id/imb_filme"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/background_rouded">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="Atores"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="20dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/secondary"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/secondary">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_add_24"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:text="Minha Lista"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/buttom">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:text="Assistir agora"
                    android:gravity="center" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_play_arrow_24"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/img_play"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_gravity="end"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/ic_baseline_play_circle_filled_24" />


    </FrameLayout>
</ScrollView>